--- a/src/components/sections/Hero/Hero.module.css
+++ b/src/components/sections/Hero/Hero.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding: 140px 0 40px;
+  padding: 140px 0 0;
   overflow: hidden;
 }
 
